--- a/src/MongoDB.Bson/project.json
+++ b/src/MongoDB.Bson/project.json
@@ -1,40 +1,26 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.1.0-*",
   "description": "MongoDB BSON",
   "authors": [ "MongoDB" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
   "frameworks": {
-    "dnxcore50": {
-      "dependencies": {
-        "System.Collections.Specialized": "4.0.1-beta-23516",
-        "System.Collections.Concurrent": "4.0.11-beta-23516",
-        "System.Diagnostics.Tools": "4.0.1-beta-23516",
-        "System.Dynamic.Runtime": "4.0.11-beta-23516",
-        "System.Linq": "4.0.1-beta-23516",
-        "System.Net.Sockets": "4.1.0-beta-23516",
-        "System.Runtime": "4.0.21-beta-23516",
-        "System.Runtime.Serialization.Primitives": "4.1.0-beta-23516",
-        "System.Reflection": "4.1.0-beta-23516",
-        "System.Reflection.Metadata": "1.1.1-beta-23516",
-        "System.Reflection.Emit.Lightweight": "4.0.1-beta-23516",
-        "System.Reflection.Extensions": "4.0.1-beta-23516",
-        "System.Reflection.Primitives": "4.0.1-beta-23516",
-        "System.Reflection.TypeExtensions": "4.1.0-beta-23516",
-        "System.Security.Cryptography.Algorithms": "4.0.0-beta-23516",
-        "System.Text.Encoding": "4.0.11-beta-23516",
-        "System.Text.Encoding.Extensions": "4.0.11-beta-23516",
-        "System.Text.RegularExpressions": "4.0.11-beta-23516",
-        "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc1-final"
-      }
+    "netcoreapp1.0": {
+      "imports": [
+        "dotnet5.6",
+        "dnxcore50",
+        "portable-net45+win8"
+      ]
     }
   },
   "dependencies": {
+    "Microsoft.NETCore.App": {
+      "version": "1.0.0-rc2-3002702",
+      "type": "platform"
+    },
+    "System.Collections.NonGeneric": "4.0.1-rc2-24027",
+    "System.Reflection.Emit.Lightweight": "4.0.1-rc2-24027",
+    "System.Runtime.Serialization.Primitives": "4.1.1-rc2-24027"
   },
-  "exclude": [
-  ],
-  "compilationOptions": {
+  "buildOptions": {
     "define": ["COREFX"]
   }
 }
