--- a/src/MongoDB.Driver.Core/project.json
+++ b/src/MongoDB.Driver.Core/project.json
@@ -1,32 +1,26 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.1.0-*",
   "description": "MongoDB Driver Core",
   "authors": [ "MongoDB" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
   "frameworks": {
-    "dnxcore50": {
-      "dependencies": {
-        "System.Diagnostics.TraceSource": "4.0.0-beta-23516",
-        "System.Net.Security": "4.0.0-beta-23516",
-        "System.Net.Sockets": "4.1.0-beta-23516",
-        "System.Reflection": "4.1.0-beta-23516",
-        "System.Security.Cryptography.Algorithms": "4.0.0-beta-23516",
-        "System.Security.Cryptography.X509Certificates": "4.0.0-beta-23516",
-        "System.Security.Principal": "4.0.1-beta-23516",
-        "System.Security.SecureString": "4.0.0-beta-23409",
-        "System.Threading.Thread": "4.0.0-beta-23516",
-        "System.Threading.Timer": "4.0.1-beta-23516"
-      }
+    "netcoreapp1.0": {
+      "imports": [
+        "dotnet5.6",
+        "dnxcore50",
+        "portable-net45+win8"
+      ]
     }
   },
   "dependencies": {
-    "MongoDB.Bson": "1.0.0-*"
+    "Microsoft.NETCore.App": {
+      "version": "1.0.0-rc2-3002702",
+      "type": "platform"
+    },
+    "MongoDB.Bson": "1.1.0-*",
+    "System.Collections.Specialized": "4.0.1-rc2-24027",
+    "System.Diagnostics.TraceSource": "4.0.0-rc2-24027"
   },
-  "exclude": [
-  ],
-  "compilationOptions": {
-    "define": ["COREFX"]
+  "buildOptions": {
+    "define": [ "COREFX" ]
   }
 }
