--- a/src/MongoDB.Driver.Examples/project.json
+++ b/src/MongoDB.Driver.Examples/project.json
@@ -1,39 +1,34 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.1.0-*",
   "description": "MongoDB Driver Examples",
   "authors": [ "MongoDB" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
   "frameworks": {
-    "dnxcore50": {
-      "dependencies": {
-        "System.Runtime.Serialization.Primitives": "4.1.0-beta-23516"
-      }
+    "netcoreapp1.0": {
+      "imports": [
+        "dotnet5.6",
+        "dnxcore50",
+        "portable-net45+win8"
+      ]
     }
   },
   "commands": {
     "MongoDB.Driver.Examples": "MongoDB.Driver.Examples"
   },
-  "exclude": [
-  ],
-  "compile": [
-  ],
-  "compilationOptions": {
-    "define": [ "COREFX" ]
+  "buildOptions": {
+    "define": [ "COREFX" ],
+    "embeded": [
+      "dataset.json"
+    ]
   },
-  "resource": [
-    "dataset.json"
-  ],
   "dependencies": {
-    "Castle.Core": "3.3.4-*",
+    "Castle.Core": "4.0.0-alpha001",
     "FluentAssertions": "4.2.2",
-    "MongoDB.Bson": "1.0.0-*",
-    "MongoDB.Driver": "1.0.0-*",
-    "MongoDB.Driver.Core": "1.0.0-*",
-    "MongoDB.Driver.Core.TestHelpers": "1.0.0-*",
-    "NSubstitute": "1.0.0-*",
-    "NUnit": "3.2.0",
-    "NUnitLite": "3.2.0"
+    "MongoDB.Bson": "1.1.0-*",
+    "MongoDB.Driver": "1.1.0-*",
+    "MongoDB.Driver.Core": "1.1.0-*",
+    "MongoDB.Driver.Core.TestHelpers": "1.1.0-*",
+    "NSubstitute": "2.0.0-*",
+    "NUnit": "3.2.1",
+    "NUnitLite": "3.2.1"
   }
 }
