--- a/src/MongoDB.Bson/project.json
+++ b/src/MongoDB.Bson/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.0-*",
+  "version": "1.3.0-*",
   "description": "MongoDB BSON",
   "authors": [ "MongoDB" ],
   "frameworks": {
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.0-rc2-3002702",
+      "version": "1.0.0",
       "type": "platform"
     },
-    "System.Collections.NonGeneric": "4.0.1-rc2-24027",
-    "System.Reflection.Emit.Lightweight": "4.0.1-rc2-24027",
-    "System.Runtime.Serialization.Primitives": "4.1.1-rc2-24027"
+    "System.Collections.NonGeneric": "4.0.1",
+    "System.Reflection.Emit.Lightweight": "4.0.1",
+    "System.Runtime.Serialization.Primitives": "4.1.1"
   },
   "buildOptions": {
     "define": ["COREFX"]
