--- a/src/MongoDB.Driver.Core.TestHelpers/project.json
+++ b/src/MongoDB.Driver.Core.TestHelpers/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.0-*",
+  "version": "1.3.0-*",
   "description": "MongoDB Driver Core Test Helpers",
   "authors": [ "MongoDB" ],
   "frameworks": {
@@ -16,12 +16,12 @@
   },
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.0-rc2-3002702",
+      "version": "1.0.0",
       "type": "platform"
     },
     "FluentAssertions": "4.2.2",
-    "MongoDB.Bson": "1.1.0-*",
-    "MongoDB.Driver.Core": "1.1.0-*",
+    "MongoDB.Bson": "1.3.0-*",
+    "MongoDB.Driver.Core": "1.3.0-*",
     "NUnit": "3.2.0"
   }
 }
