--- a/src/MongoDB.Driver.Core/project.json
+++ b/src/MongoDB.Driver.Core/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.0-*",
+  "version": "1.3.0-*",
   "description": "MongoDB Driver Core",
   "authors": [ "MongoDB" ],
   "frameworks": {
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.0-rc2-3002702",
+      "version": "1.0.0",
       "type": "platform"
     },
-    "MongoDB.Bson": "1.1.0-*",
-    "System.Collections.Specialized": "4.0.1-rc2-24027",
-    "System.Diagnostics.TraceSource": "4.0.0-rc2-24027"
+    "MongoDB.Bson": "1.3.0-*",
+    "System.Collections.Specialized": "4.0.1",
+    "System.Diagnostics.TraceSource": "4.0.0"
   },
   "buildOptions": {
     "define": [ "COREFX" ]
