--- a/src/MongoDB.Driver.Examples/project.json
+++ b/src/MongoDB.Driver.Examples/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.0-*",
+  "version": "1.3.0-*",
   "description": "MongoDB Driver Examples",
   "authors": [ "MongoDB" ],
   "frameworks": {
@@ -23,11 +23,11 @@
   "dependencies": {
     "Castle.Core": "4.0.0-alpha001",
     "FluentAssertions": "4.2.2",
-    "MongoDB.Bson": "1.1.0-*",
-    "MongoDB.Driver": "1.1.0-*",
-    "MongoDB.Driver.Core": "1.1.0-*",
-    "MongoDB.Driver.Core.TestHelpers": "1.1.0-*",
-    "NSubstitute": "2.0.0-*",
+    "MongoDB.Bson": "1.3.0-*",
+    "MongoDB.Driver": "1.3.0-*",
+    "MongoDB.Driver.Core": "1.3.0-*",
+    "MongoDB.Driver.Core.TestHelpers": "1.3.0-*",
+    "NSubstitute": "3.0.0",
     "NUnit": "3.2.1",
     "NUnitLite": "3.2.1"
   }
