--- a/src/MongoDB.Driver/project.json
+++ b/src/MongoDB.Driver/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.0-*",
+  "version": "1.3.0-*",
   "description": "MongoDB Driver",
   "authors": [ "MongoDB" ],
   "frameworks": {
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.0-rc2-3002702",
+      "version": "1.0.0",
       "type": "platform"
     },
-    "MongoDB.Bson": "1.1.0-*",
-    "MongoDB.Driver.Core": "1.1.0-*"
+    "MongoDB.Bson": "1.3.0-*",
+    "MongoDB.Driver.Core": "1.3.0-*"
   },
   "buildOptions": {
     "define": [ "COREFX" ]
